# angry

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  convert.rs  main.rs
src/convert/: mod.rs  random.rs  simple.rs
tests/: angry.rs
