[package]
name = "angry"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
anyhow = "1.0.41"
rand = "0.8.4"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.0"
tempfile = "3.2.0"